# mmrag-cs6101

./: .gitignore  ACCURACY_ANALYSIS.md  ACCURACY_IMPROVEMENT_PLAN.md  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  Dockerfile  FINDINGS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OBJECT_DETECTION_ENHANCEMENT.md  QUICKSTART_OBJECT_DETECTION.md  README.md  RUN_THIS_FIRST.md  SAM_RETRIEVER.md  analyze_outputs.py  compare_detection_impact.py  compose.yml  debug_generation.py  debug_prompt.py  diagnose_failures.py  download_models.py  download_mrag_dataset.py  eval_enhanced.py  eval_full.py  eval_simple.py  medical_multimodal_rag_plan.md  multimodal_rag_implementation_plan.md  pyproject.toml  quick-start.sh  requirements.txt  run_mrag_evaluation.py  run_sprint10_final_validation.py  run_sprint7_mvp_evaluation.py  run_sprint8_optimization.py  run_sprint9_multi_scenario.py  run_tests.py  setup.py  setup_environment.py  show_sample_outputs.py  test_actual_accuracy.py  test_api_fix.py  (+16 more)
.claude/agents/: ai-product-architect.md  code-reviewer.md  product-requirements-analyst.md  sprint-implementer.md  sprint-planner.md
.claude/commands/: architect.md  implement.md  plan-and-analyze.md  sprint-plan.md
config/: mrag_bench.yaml
docs/: API_DOCUMENTATION.md  FINAL_PROJECT_REPORT.md  IMPLEMENTATION_GUIDE.md  LOCAL_RAG_ANYTHING.md  PERFORMANCE_ANALYSIS.md  TROUBLESHOOTING.md  prd.md  sdd.md  sprint.md
docs/a2a/: reviewer.md
examples/: local_rag_anything_demo.py
output/ai_basics/auto/: ai_basics.md  ai_basics_content_list.json  ai_basics_middle.json  ai_basics_model.json
output/deep_learning/auto/: deep_learning_middle.json  deep_learning_model.json
output/full_evaluation/: full_evaluation_20251005_085220.json  full_evaluation_20251005_105509.json  full_evaluation_20251007_214744.json  full_evaluation_20251007_232308.json
output/medical_report/auto/: medical_report.md  medical_report_content_list.json  medical_report_middle.json  medical_report_model.json
output/ml_algorithms/auto/: ml_algorithms.md  ml_algorithms_content_list.json  ml_algorithms_middle.json  ml_algorithms_model.json
output/real_mrag_test/: test_results.json
output/sample_document/auto/: sample_document.md  sample_document_content_list.json  sample_document_middle.json  sample_document_model.json
output/sprint10/: sprint10_final_validation_results.json  sprint10_summary_report.md
output/test_document/auto/: test_document.md  test_document_content_list.json  test_document_middle.json  test_document_model.json
scripts/: dev-workflow.sh  setup_environment.sh
src/: __init__.py  config.py  medical_rag.py  pipeline.py
src/data/: medical_preprocessor.py
src/dataset/: __init__.py  data_loader.py  interface.py  mrag_dataset.py  mrag_hf_dataset.py  preprocessing.py  validation.py
src/evaluation/: __init__.py  benchmarking.py  evaluator.py  final_validator.py  optimizer.py  orchestrator.py  performance_optimizer.py  results.py
src/generation/: __init__.py  factory.py  interface.py  llava_enhanced_pipeline.py  llava_pipeline.py
src/local_models/: __init__.py  local_embedding_wrapper.py  local_llm_wrapper.py  local_rag_anything.py  local_vision_wrapper.py
src/models/: medical_encoder.py  medical_generator.py  medical_retriever.py
src/retrieval/: __init__.py  clip_retriever.py  embedding_processor.py  factory.py  interface.py  sam_retriever.py
src/utils/: __init__.py  error_handling.py  health_check.py  memory_manager.py  optimization.py
src/vision/: __init__.py  object_detector.py
test_unrestricted_storage/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_llm_response_cache.json  kv_store_parse_cache.json  kv_store_text_chunks.json  test_document.txt  vdb_chunks.json
tests/: __init__.py  test_config.py  test_error_handling.py  test_integration.py  test_memory_manager.py  test_retrieval.py  test_sprint10_final_validation.py  test_sprint6_features.py  test_sprint6_integration.py  test_sprint7_mvp_evaluation.py  test_sprint8_optimization.py  test_sprint9_multi_scenario.py
tests/dataset/: test_mrag_dataset.py  test_preprocessing.py
tests/test_evaluation/: test_evaluator.py  test_integration.py  test_optimizer.py
tests/test_generation/: __init__.py  test_factory.py  test_llava_pipeline.py
tests/test_integration/: __init__.py  test_end_to_end_pipeline.py
